[package]
name = "obfd"
version = "1.0.0"
edition = "2021"
authors = ["Noah Dunbar <noah@noahdunbar.com>"]
description = "A simple tool to organize files into folders by date."
readme = "README.md"
license = "MIT"
repository = "https://github.com/The-Noah/obfd"

[dependencies]
chrono = "0.4.38"
futures = "0.3.30"
tokio = { version = "1.39.3", features = ["full"] }
